--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 .container {
     display: grid;
-    gap: 2px 3px;
-    grid-template-columns: 1fr 2fr 1fr;
+    gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-rows: 1fr;
 }
-
+ 
 .zone {
     cursor:pointer;
     /* display:inline-block; */
