--- a/style.css
+++ b/style.css
@@ -4,7 +4,13 @@
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-template-rows: 1fr;
 }
- 
+ .green {
+    grid-column: span 2;
+    grid-row: 1/3;
+    align-self: end;
+ }
+
+
 .zone {
     cursor:pointer;
     /* display:inline-block; */
