--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     margin: auto 0;
+    font-family: Arial;
 }
 
 
@@ -22,6 +23,13 @@ body {
     box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
 }
 
+.box:hover {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
 /* NAV */
 
 .main-nav {
@@ -29,6 +37,12 @@ body {
     list-style: none;
     margin: 0;
     font-size: 0.7em;
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 @media only screen and (max-width: 600px) {
@@ -57,7 +71,11 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 50vh;
+    height: 70vh;
+}
+
+.cover {
+    width: 30rem;
 }
 
 /* GRID */
@@ -70,7 +88,7 @@ a {
 
 .box {
     background-color: #444;
-    padding: 130px;
+    padding: 100px;
     margin: 20px;
 }
 
